--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       dockerfile: Dockerfile
     container_name: wa_bot_app
     restart: unless-stopped
+    shm_size: '2gb'
     environment:
       # Database connection (connect ke service mysql)
       - DB_HOST=mysql
